@@ -1,4 +1,11 @@
-<html><body id="BODY">
+<html>
+<style type="text/css">
+body {
+	background-color: cyan;
+}
+</style>
+
+<body id="BODY">
 <a href="javascript:alert(document.body.innerHTML)">alert innerHTML</a><br>
 <a href="javascript:alert(document.body.innerText)">alert innerText</a><br>
 <a href="javascript:alert(document.getElementById('content'))">alert div content</a><br>
